# lib/api-spec/openapi.yaml
@@ -1016,6 +1016,8 @@ components:
           type: integer
         code:
           type: string
+        nickname:
+          type: ["string", "null"]
         status:
           type: string
         platform:
@@ -1048,6 +1050,8 @@ components:
     UpdateCardBody:
       type: object
       properties:
+        nickname:
+          type: ["string", "null"]
         platform:
           type: ["string", "null"]
         targetUrl:
